force-app/main/default/objects/Produit__c/Produit__c.object-meta.xml
<CustomObject>
    <description>Offres proposées par UGC</description>
    <label>Produit</label>
    <nameField>
        <label>Nom du produit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>