force-app/main/default/objects/Produit__c/fields/ConditionsGenerales__c.field-meta.xml
<CustomField>
    <fullName>ConditionsGenerales__c</fullName>
    <label>Conditions générales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>