force-app/main/default/objects/Produit__c/fields/DescriptionProduit__c.field-meta.xml
<CustomField>
    <fullName>DescriptionProduit__c</fullName>
    <label>Description du produit</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>