force-app/main/default/objects/Produit__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>IMAGE (CASE( &quot;Name&quot;,

&quot;Carte UGC +&quot;,&quot;1497278180000/drapeaufrance&quot;, 

&quot;UGC Blue&quot;, &quot;resource/1497538015000/carteugcblue&quot;,

&quot;.jpg&quot;), &quot;Name&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>