force-app/main/default/objects/Produit__c/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <label>Tarif</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>