force-app/main/default/objects/Produit__c/fields/TarifsSpecifiquesCinema__c.field-meta.xml
<CustomField>
    <fullName>TarifsSpecifiquesCinema__c</fullName>
    <label>Tarifs spécifiques selon les cinémas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>