force-app/main/default/objects/Produit__c/recordTypes/Produit.recordType-meta.xml
<RecordType>
    <fullName>Produit</fullName>
    <active>true</active>
    <label>Produit</label>
</RecordType>