force-app/main/default/objects/Produit__c/listViews/Tous_les_produits_UGC.listView-meta.xml
<ListView>
    <fullName>Tous_les_produits_UGC</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Tous les produits UGC</label>
</ListView>